@@ -99,32 +99,32 @@ WifiRadioEnergyModelHelper::DoInstall (Ptr<NetDevice> device,
   Ptr<Node> node = device->GetNode ();
   Ptr<WifiRadioEnergyModel> model = m_radioEnergy.Create ()->GetObject<WifiRadioEnergyModel> ();
   NS_ASSERT (model != NULL);
-  // set energy source pointer
-  model->SetEnergySource (source);
+
   // set energy depletion callback
-  // if none is specified, make a callback to WifiPhy::SetSleepMode
+  // if none is specified, make a callback to WifiPhy::SetOffMode
   Ptr<WifiNetDevice> wifiDevice = DynamicCast<WifiNetDevice> (device);
   Ptr<WifiPhy> wifiPhy = wifiDevice->GetPhy ();
+  wifiPhy->SetWifiRadioEnergyModel (model);
   if (m_depletionCallback.IsNull ())
     {
-      model->SetEnergyDepletionCallback (MakeCallback (&WifiPhy::SetSleepMode, wifiPhy));
+      model->SetEnergyDepletionCallback (MakeCallback (&WifiPhy::SetOffMode, wifiPhy));
     }
   else
     {
       model->SetEnergyDepletionCallback (m_depletionCallback);
     }
   // set energy recharged callback
-  // if none is specified, make a callback to WifiPhy::ResumeFromSleep
-  if (m_rechargedCallback.IsNull ())
-    {
-      model->SetEnergyRechargedCallback (MakeCallback (&WifiPhy::ResumeFromSleep, wifiPhy));
-    }
-  else
+  // if none is specified, make a callback to WifiPhy::ResumeFromOff
+  //TODO: ResumeFromOff not supported yet
+  //model->SetEnergyRechargedCallback (MakeCallback (&WifiPhy::ResumeFromOff, wifiPhy));
+  if (!m_rechargedCallback.IsNull ())
     {
       model->SetEnergyRechargedCallback (m_rechargedCallback);
     }
   // add model to device model list in energy source
   source->AppendDeviceEnergyModel (model);
+  // set energy source pointer
+  model->SetEnergySource (source);
   // create and register energy model phy listener
   wifiPhy->RegisterListener (model->GetPhyListener ());
   //
